solvaTask/src/main/kotlin/com/example/solvatask/error/dto/ErrorResponse.kt
package com.example.solvatask.error.dto

class ErrorResponse(
        val error: String? = null
)